gerar pdf criando nova pagina e tabela responsiva junto com bootstrap

--- a/application/views/scripts/lab/select.phtml
+++ b/application/views/scripts/lab/select.phtml
@@ -15,7 +15,7 @@
 						                                      'action' => 'insert'), null, true);
 						?>">Cadastrar laboratório</a></li>
 
-					<li><a
+					<li class="active"><a
 						href="<?php echo $this->url(array('controller' => 'lab',
 						                                      'action' => 'select'), null, true);
 						?>">Pesquisar laboratório</a></li>
