--- a/public/css/index.css
+++ b/public/css/index.css
@@ -99,10 +99,10 @@ tHead td{
 
 
 
-
+/*max-width:760px*/
 
 @media 
-only screen and (max-width: 760px),
+only screen and (max-width: 979px),
 (min-device-width: 768px) and (max-device-width: 1024px)  {
 
     /* Force table to not be like tables anymore */
